Fixed picture routing

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="/Users/advaitmarathe/Documents/GitHub/advaitmarathe.github.io/img/Marathe_Advait_profile.jpg" alt="">
+      <img class="masthead-avatar mb-5" src="img/Marathe_Advait_profile.jpg" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Advait Marathe</h1>
