--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://drive.google.com/file/d/1TlWAU3Bm2YRKg5K96s_-3iSmLjRxHVr1/view?usp=sharing">Resume</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -66,7 +69,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+      <p class="masthead-subheading font-weight-light mb-0">Student Researcher-Author-Learner</p>
 
     </div>
   </header>
@@ -98,11 +101,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="img/portfolio/robotics.png" alt="">
           </div>
         </div>
 
-        <!-- Portfolio Item 2 -->
+        <!-- Portfolio Item 2  -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -112,7 +115,7 @@
             </div>
             <img class="img-fluid" src="img/portfolio/cake.png" alt="">
           </div>
-        </div>
+        </div> 
 
         <!-- Portfolio Item 3 -->
         <div class="col-md-6 col-lg-4">
